Fixed small CSS issue where button bar in map was too wide.

--- a/sandbox/lisasoft/cgdiip/mapbuilder/demo/catalog/catalog.css
+++ b/sandbox/lisasoft/cgdiip/mapbuilder/demo/catalog/catalog.css
@@ -29,7 +29,7 @@ h1 {
   top: -25px;;
   margin-left: 1px;
   height:24px;
-  width:240px
+  width:144px;
 
 }
 
